--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_code_review_md",
+  "name": "kuc_v1_doc_md_review",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,22 +9,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cy-kaneko/test_code_review_md.git"
+    "url": "https://github.dev.cybozu.co.jp/SC/kuc_v1_doc_md_review.git"
   },
   "remarkConfig": {
     "plugins": [
-      "preset-lint-markdown-style-guide"
+      "remark-preset-lint-consistent",
+      "remark-preset-lint-recommended",
+      "remark-preset-lint-markdown-style-guide",
+      [
+        "remark-lint-no-multiple-toplevel-headings",
+        false
+      ],
+      ["remark-lint-table-pipe-alignment", false],
+      ["remark-lint-no-duplicate-headings", false]
     ]
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cy-kaneko/test_code_review_md/issues"
-  },
-  "homepage": "https://github.com/cy-kaneko/test_code_review_md#readme",
-  "dependencies": {
+  "devDependencies": {
     "dictionary-en-us": "^3.0.0",
-    "remark": "^12.0.1",
     "remark-cli": "^8.0.1",
     "remark-frontmatter": "^2.0.0",
     "remark-lint": "^7.0.1",
