--- a/.remarkrc
+++ b/.remarkrc
@@ -2,4 +2,4 @@ plugins:
   - remark-preset-lint-consistent
   - remark-preset-lint-recommended
   - remark-preset-lint-markdown-style-guide
-  - ["remark-lint-no-multiple-toplevel-headings]
+  - ["remark-lint-no-multiple-toplevel-headings", false]
