--- a/.remarkrc.yml
+++ b/.remarkrc.yml
@@ -3,3 +3,5 @@ plugins:
   - remark-preset-lint-recommended
   - remark-preset-lint-markdown-style-guide
   - ["remark-lint-no-multiple-toplevel-headings", false]
+  - ["remark-lint-table-pipe-alignment", false]
+  - ["remark-lint-no-duplicate-headings", false]
