--- a/.remarkrc.yml
+++ b/.remarkrc.yml
@@ -4,3 +4,4 @@ plugins:
   - remark-preset-lint-markdown-style-guide
   - ["remark-lint-no-multiple-toplevel-headings", false]
   - ["remark-lint-table-pipe-alignment", false]
+  - ["remark-lint-no-duplicate-headings", false]
